[package]
name = "hmt-backend-native"
description = "Compile Cranelift IR into native machine code by auto-detecting the host architecture"
version = "0.1.15"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
cranelift = { version = "0.129", features = ["module", "object", "native"] }
cranelift-reader = "0.129"
